# CAPEsolo

./: .gitignore  README.md  pyproject.toml
CAPEsolo/: analyzer.py  cli.py  mcp_server.py
CAPEsolo/capelib/: netlog.py  objects.py  resultserver.py  utils.py
CAPEsolo/capelib/html/: base-report.html  report.html
CAPEsolo/capelib/html/css/: style.css
CAPEsolo/capelib/html/generic/: _file_info.html  _virustotal.html
CAPEsolo/capelib/html/sections/: _summary.html  behavior.html  file.html  info.html  payloads.html  proctree.html
CAPEsolo/capelib/html/sections/behavior/: _chunk.html  _processes.html  _search.html  _search_results.html  _tree.html
CAPEsolo/classes/: behavior_panel.py  configs_panel.py  debug_console.py  debug_controls.py  debugger_panel.py  html_report.py  json_report.py  logger_window.py  main_frame.py  payloads_panel.py  pe_window.py  signatures_panel.py  start_panel.py  strings_panel.py  target_info.py  theme.py  yara_panel.py
CAPEsolo/data/yara/: AxolotlLoader.yar  RustyLoader.yar  Zloader.yar
CAPEsolo/lib/api/: process.py
CAPEsolo/lib/common/: defines.py
CAPEsolo/lib/core/: pipe.py
CAPEsolo/modules/auxiliary/: js_console.py
CAPEsolo/yara/CAPE/: AdaptixBeacon.yar  AuraStealer.yar  AxolotlLoader.yar  DocConnect.yar  NitroBunnyDownloader.yar  Quickbind.yar  RustyLoader.yar  SparkRAT.yar  TrustConnect.yar  Zloader.yar
