[project]
name = "CAPEsolo"
version = "0.5.18"
description = "Standalone CAPEMON"
authors = [{name = "enzok", email = "<7831008+enzok@users.noreply.github.com>"}]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "wxpython>=4.2.5",
    "pywin32>=311",
    "yara-python>=4.5.4",
    "pefile>=2024.8.26",
    "cryptography>=46.0.7",
    "requests>=2.33.0",
    "SFlock2>=0.3.86",
    "greenlet>=3.5.0",
    "gevent>=26.4.0",
    "dnspython>=2.8.0",
    "tldextract>=5.3.1",
    "bs2json>=0.3.0",
    "cape-parsers>=0.1.62",
    "pytest>=9.0.3",
    "setuptools>=82.0.1",
    "typing-extensions==4.15.0",
    "ruff>=0.15.12",
    "poetry-core>=2.4.0",
    "distorm3s==3.5.4",
    "keystone-engine>=0.9.2",
    "jinja2>=3.1.6",
    "pymongo>=4.17.0",
    "py-tlsh>=4.7.2",
    "mcp>=1.27.0",
]

[project.scripts]
CAPEsolo = "CAPEsolo.cli:main"
CAPEsolo-mcp = "CAPEsolo.mcp_server:main"

[tool.uv.build-backend]
module-name = "CAPEsolo"
module-root = "."

[tool.poetry]
name = "CAPEsolo"
version = "0.5.17"
description = "Standalone CAPEMON"
authors = ["enzok <7831008+enzok@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
wxpython = "^4.2.4"
pywin32 = "^311"
yara-python = "^4.5.4"
pefile = "^2024.8.26"
cryptography = "46.0.6"
requests = "2.33.0"
SFlock2 = "^0.3.86"
greenlet = "^3.3.1"
gevent = "^25.9.1"
dnspython = "^2.8.0"
tldextract = "^5.3.1"
bs2json = "^0.1.2"
cape-parsers = "^0.1.62"
pytest = "9.0.3"
setuptools = "^80.10.2"
typing-extensions = "==4.15.0"
ruff = "^0.15.0"
poetry-core = "^2.3.1"
distorm3s = "==3.5.4"
keystone-engine = "^0.9.2"
jinja2 = "^3.1.6"
pymongo = "^4.16.0"
py-tlsh = "^4.7.2"
mcp = "^1.13.1"

[tool.poetry.scripts]
CAPEsolo = "CAPEsolo.cli:main"
CAPEsolo-mcp = "CAPEsolo.mcp_server:main"

[build-system]
requires = ["uv-build>=0.9.26,<0.10"]
build-backend = "uv_build"

[tool.black]
line-length = 132
