[project]
name = "CAPEsolo"
version = "0.5.20"
description = "Standalone CAPEMON"
authors = [{name = "enzok", email = "<7831008+enzok@users.noreply.github.com>"}]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "wxpython>=4.2.5",
    "pywin32>=311",
    "yara-python>=4.5.4",
    "pefile>=2024.8.26",
    "cryptography>=46.0.7",
    "requests>=2.33.0",
    "SFlock2>=0.3.86",
    "greenlet>=3.5.1",
    "gevent>=26.5.0",
    "dnspython>=2.8.0",
    "tldextract>=5.3.1",
    "bs2json>=0.3.0",
    "cape-parsers>=0.1.62",
    "pytest>=9.0.3",
    "setuptools>=82.0.1",
    "typing-extensions==4.15.0",
    "ruff>=0.15.13",
    "poetry-core>=2.4.0",
    "distorm3s==3.5.5",
    "keystone-engine>=0.9.2",
    "jinja2>=3.1.6",
    "pymongo>=4.17.0",
    "tlsh-python>=0.1.0",
    "mcp>=1.27.1",
]

[project.scripts]
CAPEsolo = "CAPEsolo.cli:main"
CAPEsolo-mcp = "CAPEsolo.mcp_server:main"

[tool.uv.build-backend]
module-name = "CAPEsolo"
module-root = "."

[tool.poetry]
requires-poetry = ">=2.0"

[build-system]
requires = ["uv-build>=0.9.26,<0.10"]
build-backend = "uv_build"

[tool.black]
line-length = 132
